--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="content_box">
                <div class="grid_container">
                     <div class="grid_item">
-                        <a href="/" class="cube">1</a>
+                        <a href="/" class="cube">10 Print</a>
                     </div>
                     <div class="grid_item">
-                        <a href="/" class="cube">2</a>
+                        <a href="p5collect/02/Eye follow" class="cube">Eye Move</a>
                     </div>
                     <div class="grid_item">
                         <a href="/" class="cube">3</a>
