--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="/" class="cube">10 Print</a>
                     </div>
                     <div class="grid_item">
-                        <a href="Eye follow/index.html" class="cube">Eye Move</a>
+                        <a href="Eye ollow/index.html" class="cube">Eye Move</a>
                     </div>
                     <div class="grid_item">
                         <a href="/" class="cube">3</a>
