--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="content_box">
                <div class="grid_container">
                     <div class="grid_item">
-                        <a href="/" class="cube">10 Print</a>
+                        <a href="eye.html" class="cube">10 Print</a>
                     </div>
                     <div class="grid_item">
                         <a href="Eye Follow/index.html" class="cube">Eye Move</a>
